--- a/SimpleToDoList/SimpleToDoList.csproj
+++ b/SimpleToDoList/SimpleToDoList.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FormTaskEdit.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormTaskEdit.Designer.cs">
+      <DependentUpon>FormTaskEdit.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -54,7 +60,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TaskItem.cs" />
     <Compile Include="ToDoItem.cs" />
+    <EmbeddedResource Include="FormTaskEdit.resx">
+      <DependentUpon>FormTaskEdit.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
