--- a/SimpleToDoList/SimpleToDoList.csproj
+++ b/SimpleToDoList/SimpleToDoList.csproj
@@ -122,5 +122,13 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Images\21994588_2111.w039.n003.7B.p1.7.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\Thalita-Torres-Office-Pen-rubber-sharpener.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
